[gd_scene load_steps=24 format=2]

[ext_resource path="res://world/grass.tscn" type="PackedScene" id=1]
[ext_resource path="res://walls/walls.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://world/positions/top_position.gd" type="Script" id=4]
[ext_resource path="res://world/positions/bottom_script.gd" type="Script" id=5]
[ext_resource path="res://world/positions/front_position.gd" type="Script" id=6]
[ext_resource path="res://UI/HUD/resourcesOverlay/resourcesOverlay.tscn" type="PackedScene" id=7]
[ext_resource path="res://players/archer/sprite/invis_button.png" type="Texture" id=8]
[ext_resource path="res://target_script.gd" type="Script" id=9]
[ext_resource path="res://players/archer/sprite/target.png" type="Texture" id=10]
[ext_resource path="res://fallen_gate/gate.png" type="Texture" id=11]
[ext_resource path="res://fallen_gate/gate.tscn" type="PackedScene" id=12]
[ext_resource path="res://UI/hp_bar/Health_Bar.tscn" type="PackedScene" id=13]
[ext_resource path="res://world/positions/Positions_script.gd" type="Script" id=14]
[ext_resource path="res://Camera/Camera.tscn" type="PackedScene" id=15]
[ext_resource path="res://walls/tents/tent_red.png" type="Texture" id=16]
[ext_resource path="res://misc/navigation/Nav_polly.gd" type="Script" id=17]
[ext_resource path="res://UI/HUD/hud.tscn" type="PackedScene" id=18]
[ext_resource path="res://UI/tent/tent.gd" type="Script" id=19]
[ext_resource path="res://UI/tent/TentPopUp.tscn" type="PackedScene" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 216.5, 490.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 216, 470.5 )

[sub_resource type="NavigationPolygon" id=3]
vertices = PoolVector2Array( 221, 826, -528, 957, -520, -263, 219, 405, 1532, -181, 1536, 939, 657, 815, 657, 401, 658, 162, 657, -182, 219, 167, 225, -178 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6, 7, 8 ), PoolIntArray( 8, 9, 4 ), PoolIntArray( 10, 8, 7, 3 ), PoolIntArray( 10, 3, 2 ), PoolIntArray( 10, 2, 11 ) ]
outlines = [ PoolVector2Array( -520, -263, 225, -178, 219, 167, 658, 162, 657, -182, 1532, -181, 1536, 939, 657, 815, 657, 401, 219, 405, 221, 826, -528, 957 ) ]

[node name="Main" type="YSort"]
position = Vector2( 14, -21 )
sort_enabled = false
script = ExtResource( 3 )
Knight_Food = 5
Knight_Money = 10
Catapult_Food = 20
Catapult_Money = 30

[node name="Projectile" type="Node2D" parent="."]
z_index = 340

[node name="world" type="Node2D" parent="."]

[node name="walls" parent="world" instance=ExtResource( 2 )]
position = Vector2( -446, -161 )
scale = Vector2( 1.87643, 1.50419 )
z_index = 1

[node name="grass" parent="world" instance=ExtResource( 1 )]
position = Vector2( -226, -91 )
scale = Vector2( 1.49946, 1.49946 )

[node name="Positions" type="Node2D" parent="."]
script = ExtResource( 14 )

[node name="top" type="Position2D" parent="Positions"]
position = Vector2( 609, 86 )
script = ExtResource( 4 )
__meta__ = {
"_gizmo_extents_": 43.6
}

[node name="bottom" type="Position2D" parent="Positions"]
position = Vector2( 598, 649 )
script = ExtResource( 5 )
__meta__ = {
"_gizmo_extents_": 43.6
}

[node name="Node" type="Node" parent="Positions"]

[node name="front" type="Position2D" parent="Positions/Node"]
position = Vector2( 292, -128 )
script = ExtResource( 6 )

[node name="front_2" type="Position2D" parent="Positions/Node"]
position = Vector2( 332, -77 )

[node name="Position2D3" type="Position2D" parent="Positions/Node"]
position = Vector2( 261, -84 )

[node name="test" type="Position2D" parent="Positions/Node"]
position = Vector2( 532, 144 )

[node name="Knight" type="Node" parent="Positions"]

[node name="castle_wall" type="Position2D" parent="Positions/Knight"]
position = Vector2( 526, 277 )

[node name="target" type="Node2D" parent="." groups=["Targeting"]]
z_index = 52
script = ExtResource( 9 )

[node name="Top_button" type="TouchScreenButton" parent="target"]
position = Vector2( 221, -146 )
scale = Vector2( 4.48553, 2.9115 )
normal = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="target"]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="wallen_gate" type="Node2D" parent="."]
position = Vector2( -309, -179 )
scale = Vector2( 1.76996, 1.76996 )
z_index = 3

[node name="Right" type="Sprite" parent="wallen_gate"]
visible = false
position = Vector2( 600, 283 )
rotation = 1.57079
scale = Vector2( 1.34413, 1.22233 )
texture = ExtResource( 11 )

[node name="Left" type="Sprite" parent="wallen_gate"]
visible = false
position = Vector2( 280, 284 )
rotation = 4.71238
scale = Vector2( 1.31375, 1.23375 )
texture = ExtResource( 11 )

[node name="Gate" parent="wallen_gate" instance=ExtResource( 12 )]
position = Vector2( -95, -15 )
z_index = -3

[node name="Health_Bar" parent="wallen_gate" instance=ExtResource( 13 )]
modulate = Color( 1, 1, 1, 0.443137 )
margin_left = 366.675
margin_top = 172.885
margin_right = 366.675
margin_bottom = 172.885

[node name="wall_collisions" type="Node2D" parent="."]

[node name="top_wall" type="StaticBody2D" parent="wall_collisions"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_collisions/top_wall"]
position = Vector2( 439.5, -327.5 )
shape = SubResource( 1 )

[node name="bottom_wall" type="StaticBody2D" parent="wall_collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_collisions/bottom_wall"]
position = Vector2( 441, 883.5 )
shape = SubResource( 2 )

[node name="Camera" parent="." instance=ExtResource( 15 )]
position = Vector2( 486, 319 )
zoom = Vector2( 1.689, 1.615 )

[node name="Navigation2D" type="Navigation2D" parent="."]
script = ExtResource( 17 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="hud" parent="CanvasLayer" instance=ExtResource( 18 )]
margin_left = 3.0
margin_right = 3.0

[node name="resourcesOverlay" parent="CanvasLayer" instance=ExtResource( 7 )]
anchor_left = 0.027
anchor_bottom = 0.127
margin_left = 0.351999
margin_bottom = -0.200005

[node name="tent" type="TouchScreenButton" parent="."]
position = Vector2( 1154, 171 )
scale = Vector2( 5.69668, 5.69668 )
normal = ExtResource( 16 )
script = ExtResource( 19 )

[node name="TentPopUpCanvas" type="CanvasLayer" parent="."]

[node name="ClosePopUp" type="Button" parent="TentPopUpCanvas"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = -388.0
margin_top = -200.0
margin_right = 1391.0
margin_bottom = 806.0
disabled = true

[node name="TentPopUp" parent="TentPopUpCanvas" instance=ExtResource( 20 )]
visible = false
margin_left = -442.0
margin_top = -237.0
margin_right = 352.0
margin_bottom = 239.0

[connection signal="pressed" from="target/Top_button" to="target" method="_on_Top_button_pressed"]
[connection signal="released" from="target/Top_button" to="target" method="_on_Top_button_released"]
[connection signal="pressed" from="tent" to="tent" method="_on_tent_pressed"]
[connection signal="button_down" from="TentPopUpCanvas/ClosePopUp" to="tent" method="_on_ClosePopUp_button_down"]
